// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parity / envelope JSON schema snapshot > android --dry-run --json envelope shape is stable 1`] = `
{
  "android": {
    "device_serial": "",
    "device_task": "",
    "flavor": "",
    "instrumented_modules": [],
  },
  "coverage": {
    "missed_lines": null,
    "modules_with_jacoco_plugin": [],
    "modules_with_kover_plugin": [],
    "tool": "auto",
  },
  "dry_run": true,
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "isolated": {
    "cache_dir": null,
    "enabled": false,
    "kept": false,
    "locked": true,
  },
  "modules": [],
  "plan": {
    "final_args": "<PLATFORM_SPECIFIC>",
    "modules": [],
    "script_path": "<PLATFORM_SPECIFIC>",
    "skipped": [],
    "spawn_args": "<PLATFORM_SPECIFIC>",
    "spawn_cmd": "<PLATFORM_SPECIFIC>",
    "test_filter": null,
  },
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "android",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > android --list-only --json envelope shape is stable 1`] = `
{
  "android": {
    "device_serial": "",
    "device_task": "",
    "flavor": "",
    "instrumented_modules": [],
  },
  "coverage": {
    "missed_lines": null,
    "modules_with_jacoco_plugin": [],
    "modules_with_kover_plugin": [],
    "tool": "auto",
  },
  "duration_ms": "<DURATION_MS>",
  "errors": [
    {
      "code": "no_test_modules",
      "message": "[ERROR] No modules found with android-instrumented tests",
    },
  ],
  "exit_code": 3,
  "isolated": {
    "cache_dir": null,
    "enabled": false,
    "kept": false,
    "locked": true,
  },
  "modules": [],
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "android",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > benchmark --dry-run --json envelope shape is stable 1`] = `
{
  "benchmark": {
    "config": "smoke",
    "failed": 0,
    "passed": 0,
    "platforms": [],
    "timed_out": 0,
    "timeout_ms": 0,
    "total": 0,
  },
  "coverage": {
    "missed_lines": null,
    "modules_with_jacoco_plugin": [],
    "modules_with_kover_plugin": [],
    "tool": "auto",
  },
  "dry_run": true,
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "isolated": {
    "cache_dir": null,
    "enabled": false,
    "kept": false,
    "locked": true,
  },
  "modules": [],
  "plan": {
    "final_args": "<PLATFORM_SPECIFIC>",
    "modules": [],
    "script_path": "<PLATFORM_SPECIFIC>",
    "skipped": [],
    "spawn_args": "<PLATFORM_SPECIFIC>",
    "spawn_cmd": "<PLATFORM_SPECIFIC>",
    "test_filter": null,
  },
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "benchmark",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > changed --dry-run --json --staged-only envelope shape is stable 1`] = `
{
  "changed": {
    "base_ref": "HEAD",
    "detected_modules": [],
    "staged_only": true,
  },
  "coverage": {
    "missed_lines": null,
    "modules_with_jacoco_plugin": [],
    "modules_with_kover_plugin": [],
    "tool": "auto",
  },
  "dry_run": true,
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "isolated": {
    "cache_dir": null,
    "enabled": false,
    "kept": false,
    "locked": true,
  },
  "modules": [],
  "plan": {
    "final_args": "<PLATFORM_SPECIFIC>",
    "modules": [
      {
        "android_dsl": false,
        "android_dsl_variant": null,
        "coverage_plugin": null,
        "has_flavor": false,
        "name": "mod",
        "test_build_type": null,
        "type": "kmp",
      },
    ],
    "script_path": "<PLATFORM_SPECIFIC>",
    "skipped": [],
    "spawn_args": "<PLATFORM_SPECIFIC>",
    "spawn_cmd": "<PLATFORM_SPECIFIC>",
    "test_filter": null,
  },
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "changed",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > coverage --dry-run --json envelope shape is stable 1`] = `
{
  "coverage": {
    "missed_lines": null,
    "modules_with_jacoco_plugin": [],
    "modules_with_kover_plugin": [],
    "tool": "auto",
  },
  "dry_run": true,
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "isolated": {
    "cache_dir": null,
    "enabled": false,
    "kept": false,
    "locked": true,
  },
  "modules": [],
  "plan": {
    "final_args": "<PLATFORM_SPECIFIC>",
    "modules": [],
    "script_path": "<PLATFORM_SPECIFIC>",
    "skipped": [],
    "spawn_args": "<PLATFORM_SPECIFIC>",
    "spawn_cmd": "<PLATFORM_SPECIFIC>",
    "test_filter": null,
  },
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "coverage",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > describe --json --skip-probe envelope shape is stable 1`] = `
{
  "coverage": {
    "missed_lines": null,
    "tool": "none",
  },
  "describe": {
    "cache_key": "f42b0a1b80ae622c4fc749853078a3f256945acf",
    "coverage_tool": "none",
    "dependency_graph": {
      "composite_builds": [],
      "included_modules": [
        ":mod",
      ],
    },
    "generated_at": "<GENERATED_AT>",
    "jdk_requirement": {
      "agp": null,
      "min": null,
    },
    "modules": [
      {
        "android_dsl": null,
        "android_dsl_variant": null,
        "coverage_plugin": null,
        "coverage_task": null,
        "has_flavor": false,
        "name": ":mod",
        "path": "mod",
        "platforms": [
          "jvm",
        ],
        "test_build_type": null,
        "test_tasks": {
          "device": null,
          "ios": null,
          "macos": null,
          "unit": "jvmTest",
          "web": null,
        },
        "type": "kmp",
      },
    ],
    "schema_version": 7,
  },
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "modules": [],
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "describe",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > doctor --json envelope shape is stable 1`] = `
{
  "checks": [
    {
      "message": "<string>",
      "name": "<string>",
      "status": "<string>",
      "value": "<string>",
    },
  ],
  "coverage": {
    "missed_lines": null,
    "tool": "none",
  },
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "gradle_config": {
    "caching": "<boolean>",
    "configureondemand": "<boolean>",
    "daemon": "<boolean>",
    "jvmargs": "<null>",
    "parallel": "<boolean>",
    "sources": {
      "project": "<boolean>",
      "user": "<boolean>",
    },
    "workers_max": "<null>",
  },
  "modules": [],
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "doctor",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > info --json --no-adb envelope shape is stable 1`] = `
{
  "coverage": {
    "missed_lines": null,
    "tool": "auto",
  },
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "info": {
    "adb": "<null>",
    "android_sdk": {
      "path": "<string>",
      "source": "<string>",
    },
    "config": {
      "present": "<boolean>",
    },
    "gradle_config": {
      "caching": "<boolean>",
      "configureondemand": "<boolean>",
      "daemon": "<boolean>",
      "parallel": "<boolean>",
      "sources": {
        "project": "<boolean>",
        "user": "<boolean>",
      },
      "workers_max": "<null>",
    },
    "gradlew": {
      "present": "<boolean>",
      "project_root": "<string>",
    },
    "jdk": {
      "java_home": "<string>",
      "note": "<string>",
      "version": "<string>",
    },
    "jdk_catalogue": [
      {
        "major": "<number>",
        "vendor": "<string>",
      },
    ],
    "node": "<string>",
    "os": "<string>",
    "platform": "<string>",
    "shell": {
      "name": "<string>",
      "present": "<boolean>",
    },
  },
  "modules": [],
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "info",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > parallel --dry-run --json envelope shape is stable 1`] = `
{
  "coverage": {
    "missed_lines": null,
    "modules_with_jacoco_plugin": [],
    "modules_with_kover_plugin": [],
    "tool": "auto",
  },
  "dry_run": true,
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "isolated": {
    "cache_dir": null,
    "enabled": false,
    "kept": false,
    "locked": true,
  },
  "modules": [],
  "parallel": {
    "legs": [],
    "max_workers": 0,
    "test_type": "auto",
    "timeout_s": 600,
  },
  "plan": {
    "final_args": "<PLATFORM_SPECIFIC>",
    "modules": [
      {
        "android_dsl": false,
        "android_dsl_variant": null,
        "coverage_plugin": null,
        "has_flavor": false,
        "name": "mod",
        "test_build_type": null,
        "type": "kmp",
      },
    ],
    "script_path": "<PLATFORM_SPECIFIC>",
    "skipped": [],
    "spawn_args": "<PLATFORM_SPECIFIC>",
    "spawn_cmd": "<PLATFORM_SPECIFIC>",
    "test_filter": null,
  },
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "parallel",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;

exports[`parity / envelope JSON schema snapshot > update --check --json envelope shape is stable 1`] = `
{
  "coverage": {
    "missed_lines": null,
    "tool": "auto",
  },
  "duration_ms": "<DURATION_MS>",
  "errors": [],
  "exit_code": 0,
  "modules": [],
  "project_root": "<PROJECT_ROOT>",
  "schema_version": 2,
  "skipped": [],
  "subcommand": "update",
  "tests": {
    "failed": 0,
    "passed": 0,
    "skipped": 0,
    "total": 0,
  },
  "tool": "kmp-test",
  "update": {
    "action": "check-only",
    "current_version": "<KMP_TEST_VERSION>",
    "install_command": null,
    "latest_source": "stub",
    "latest_version": "99.99.99",
    "up_to_date": false,
  },
  "version": "<KMP_TEST_VERSION>",
  "warnings": [],
}
`;
